fix overflow

--- a/src/components/SpecificProjectJourney/SpecificProjectJourney.scss
+++ b/src/components/SpecificProjectJourney/SpecificProjectJourney.scss
@@ -2,6 +2,7 @@
 
 .specific-project-journey {
   padding: 5rem 0;
+  overflow-x: hidden;
 
   @media (max-width: 767.98px) {
     padding: 3rem 0;
